--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			</div>
 			-->
 		</div>
-		<div style="margin:6%;font-family: 'Kavivanar', serif; font-size: 38px;">
-		""You miss 100% of the shots you don't take. -Wane Gretzky" -Michael Scott"
+		<div style="margin:6%;font-family: 'Arial', serif; font-size: 38px;">
+			"You miss 100% of the shots you don't take. -Wane Gretzky" -Michael Scott" - Durgesh Kumar"
 		</div>
 		<footer>
 		  <ul class="list-inline text-center">
@@ -48,11 +48,11 @@
 			</li>
 		  </ul>
 		</footer>
-		<div align="center">
+<!-- 		<div align="center">
 			<a href="https://smallseotools.com/visitor-hit-counter/" target="_blank" title="Web Counter">
 				<img src="https://smallseotools.com/counterDisplay?code=0bfc687eac76bc628ab3c2b2c2249662&amp;style=0010&amp;pad=5&amp;type=page&amp;initCount=" title="Web Counter" alt="Web Counter" border="0">
 			</a>
-		</div>
+		</div> -->
 		<br>
 		<div align="center">
 		</div>
