--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 			-->
 		</div>
 		<div style="margin:6%;font-family: 'Arial', serif; font-size: 38px;">
-			"You miss 100% of the shots you don't take. -Wane Gretzky" -Michael Scott" - Durgesh Kumar"
+			"You miss 100% of the shots you don't take. -Wane Gretzky" 
+									-Michael Scott" 
+										- Durgesh Kumar"
 		</div>
 		<footer>
 		  <ul class="list-inline text-center">
@@ -48,11 +50,9 @@
 			</li>
 		  </ul>
 		</footer>
-<!-- 		<div align="center">
-			<a href="https://smallseotools.com/visitor-hit-counter/" target="_blank" title="Web Counter">
-				<img src="https://smallseotools.com/counterDisplay?code=0bfc687eac76bc628ab3c2b2c2249662&amp;style=0010&amp;pad=5&amp;type=page&amp;initCount=" title="Web Counter" alt="Web Counter" border="0">
-			</a>
-		</div> -->
+		<div align="center">
+			<a href="https://smallseotools.com/visitor-hit-counter/" target="_blank" title="SST free website click counter" rel="nofollow noopener"><img src="https://smallseotools.com/counterDisplay?code=269d51da63339a468ae11d9a65ea11b3&style=0016&pad=5&type=ip&initCount=1" alt="SST free website click counter" border="0"></a>
+		</div>
 		<br>
 		<div align="center">
 		</div>
