--- a/index.html
+++ b/index.html
@@ -20,17 +20,8 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h1> Durgesh Kumar </h1>
-				<h5>Passionate Data Science Enthusiast <span class="blinking-cursor">_</span></h5>
+				<h5>Passionate Data Science Aspirant <span class="blinking-cursor">_</span></h5>
 			</div>
-			<!--
-			<div>
-				<ul class="list-inline" style="margin-top: 30px;">
-					<li class="list-inline-item">
-						<a target="_blank" href="https://github.com/SachinKalsi/"> <h3>let_my_code_speak</h3></a>
-					</li>
-				</ul>
-			</div>
-			-->
 		</div>
 		<div style="margin:6%;font-family: 'Arial', serif; font-size: 38px;">
 			"You miss 100% of the shots you don't take. -Wane Gretzky" 
@@ -39,9 +30,6 @@
 		</div>
 		<footer>
 		  <ul class="list-inline text-center">
-			<!--<li>
-				  <a target="_blank" href="https://sachinkalsi.github.io/resume/Sachin_Kalsi_ML.pdf"><span class="fa-3x fa fa-file"></span>Resume</a>
-			</li>-->
 			<li>
 				<a target="_blank" href="https://www.linkedin.com/in/durgesh4iitj"><span class="fa-3x fa fa-linkedin"></span> Linkedin</a>
 			</li>
